--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -10,7 +10,11 @@
 <body class="works_on_smartphone">
 >
     <header>
-        <ul>
+        <ul>  
+        <li class="logo">&#128640;</li> <!-- 🚀 Rocket emoji -->
+    <li>Home</li>
+    <li>About</li>
+    <li>Contact</li>
             <li><a href="index.html">Home</a></li>
             <li><a href="tweets.html">Tweets</a></li>
         </ul>
