--- a/headphones/6-index.html
+++ b/headphones/6-index.html
@@ -63,31 +63,30 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                     </div>
                     <div class="result-main">
-                    <div>
-                    <img src="images/Pentagon.png" alt="Pentagon">
+                <div>
+                    <div class="pentagon"></div>
                     <h1>+2%</h1>
                     <p>Lorem ipsum dolor</p>
-                    </div>
+                </div>
 
-                    <div>
-                    <img src="images/Pentagon.png" alt="Pentagon">
-                    <h1>+2%</h1>
-                    <p>Lorem ipsum dolor</p>
-                    </div>
+                <div>
+                 <div class="pentagon"></div>
+                 <h1>+2%</h1>
+                 <p>Lorem ipsum dolor</p>
+               </div>
 
-                    <div>
-                    <img src="images/Pentagon.png" alt="Pentagon">
-                    <h1>+2%</h1>
-                    <p>Lorem ipsum dolor</p>
-                    </div>
+                <div>
+                 <div class="pentagon"></div>
+                 <h1>+2%</h1>
+                 <p>Lorem ipsum dolor</p>
+                </div>
 
-                    <div>
-                    <img src="images/Pentagon.png" alt="Pentagon">
-                    <h1>+2%</h1>
-                    <p>Lorem ipsum dolor</p>
-                    </div>
-                    </div>
-                    </div>
+                <div>
+                 <div class="pentagon"></div>
+                 <h1>+2%</h1>
+                 <p>Lorem ipsum dolor</p>
+                 </div>
+                 </div>
                 </section>
                 <section>
                     <div class="contact-box">
